# climbing-condition-finder

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.claude/: settings.json
airflow/dags/: raw_climbing_areas_to_gcs.py  raw_forecast_to_gcs.py
airflow/dbt/climbing_weather/: dbt_project.yml
airflow/dbt/climbing_weather/macros/: climb_score.sql  ramp.sql
airflow/dbt/climbing_weather/models/marts/: dim_area.sql  dim_area.yml  fact_hourly_forecast_by_area.sql
airflow/dbt/climbing_weather/models/staging/: sources.yml  stg_raw_graph_ql_areas.sql  stg_raw_graph_ql_areas.yml  stg_raw_graph_ql_countries.sql  stg_raw_graph_ql_countries.yml  stg_raw_nws.sql  stg_raw_nws.yml
airflow/plugins/: requirements.txt
airflow/plugins/hooks/: graphql_hook.py  nws_hook.py
airflow/plugins/operators/: api_to_gcs_operator.py
terraform/: main.tf  variables.tf
ui/api/: areas.py  forecast.py
ui/app/: main.py
ui/app/static/: crag.js
ui/app/templates/: branch.html  crag.html
ui/schemas/: areas.py  forecast.py
ui/services/: areas.py  bq_client.py  forecast.py
