[project]
name = "climbing-weather"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.13"
dependencies = [
    "google-cloud-storage (>=3.10,<4.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "apache-airflow (==2.11.2)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "apache-airflow-providers-google",
    "dbt (>=1.0.0.40.18,<2.0.0.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
